# ai-work

./: .gitignore  Cargo.toml  README.md  USAGE.md
src/: lib.rs  main.rs
src/scaffold/: mod.rs
src/templates/: mod.rs
tests/: integration.rs
