[package]
name = "ai-work"
version = "0.1.0"
edition = "2021"
description = "🧬 AI Project Template Scaffolding CLI"

[[bin]]
name = "aiw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
which = "7"

[dev-dependencies]
tempfile = "3"
walkdir = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
